added some swagger documentation
