# routes/login.js
@@ -4,7 +4,9 @@ const path = require("path");
 const router = require("express").Router();
 
 router.get("/", (req, res) => {
-  res.render("index", { });
+  /*#swagger.tags = ['Login']
+    #swagger.summary = "Renders index.html" */
+  res.render("index", {});
   // res.sendFile("index.html", { root: "./public" });
 });
 
@@ -13,9 +15,9 @@ router.post("/", async (req, res) => {
 });
 
 router.get("/register", (req, res) => {
+  /*#swagger.tags = ['Login']
+    #swagger.summary = "Sends user to register page" */
   res.sendFile("registration.html", { root: "./public" });
 });
 
-
-  
 module.exports = router;
